# Learning-FastApi

./: README.md  app.py  pyproject.toml  settings.py
