[tool.poetry]
name = "learning-fastapi"
version = "0.1.0"
description = ""
authors = ["Dmitry-Peskov <dv.peskov@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
alembic = "^1.14.0"
aiosqlite = "^0.20.0"
sqlalchemy = "^2.0.36"
fastapi = {extras = ["standard"], version = "^0.115.6"}
pydantic = "^2.10.3"
pydantic-settings = "^2.6.1"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
